--- a/EssentialApp/EssentialApp.xcworkspace/xcshareddata/xcschemes/EssentialAppUIAcceptanceTests.xcscheme
+++ b/EssentialApp/EssentialApp.xcworkspace/xcshareddata/xcschemes/EssentialAppUIAcceptanceTests.xcscheme
@@ -14,7 +14,7 @@
       <Testables>
          <TestableReference
             skipped = "NO"
-            parallelizable = "YES">
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D7BFEEAE294A0E52007A0422"
